[package]
name = "neutron-host"
version = "0.1.0"
authors = ["VoR0220 <catalanor0220@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"./", 
	"neutron-testbench"
]

[dependencies]
qx86 = { git = "https://github.com/qtumproject/qx86-rs", branch = "master"}
struct_deser = "0.1.1"
struct_deser-derive = "0.1.0"
neutron-star-constants = { git = "https://github.com/qtumproject/neutronstar-constants", branch = "master"}
ring = "0.16.9"
num = "0.2.0"
num-derive = "0.3.0"
num-traits = "0.2"
serde = "1.0.100"
rmp-serde = "0.14.0"
serde_derive = "1.0.100"
elf = "0.0.10"