[package]
name = "neutron-host"
version = "0.1.0"
authors = ["earlz <earlz@qtum.info>", "VoR0220 <catalanor0220@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"./", 
	"neutron-testbench"
]

[dependencies]
narm = { path = "../narm" }
#neutron-star-constants = { git = "https://github.com/qtumproject/neutronstar-constants", branch = "master"}
neutron-star-constants = { path = "../neutron-star-constants"}
ring = "0.16"
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
elf = "0.0.10"
rand = "0.8"
