[package]
name = "neutron-abi"
version = "0.1.0"
authors = ["VoR0220 <catalanor0220@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4.0"
structopt = "0.3.14"
toml = "0.5.6"
struct_deser = "0.1.1"
struct_deser-derive = "0.1.0"
serde = "1.0.106"
serde_derive = "1.0.106"
ramhorns = "0.9.3"
