[package]
name = "neutron-testbench"
version = "0.1.0"
authors = ["VoR0220 <catalanor0220@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neutron-star-constants = { git = "https://github.com/qtumproject/neutronstar-constants", branch = "master"}
neutron-host = { path = "../"}
